fix navbar collapse and add media queries for different elements

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,11 @@ section.container-fluid {
   background-size: cover;
 }
 
+.carousel-first-img img {
+  position: relative;
+  opacity: 0.5;
+}
+
 .card img {
   height: 300px;
   object-fit: cover;
@@ -33,4 +38,23 @@ footer::before {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+@media (min-width: 368px) and (max-width: 990px) {
+  .carousel-title {
+    display: none !important;
+  }
+
+  .carousel-first-img {
+    opacity: 1 !important;
+  }
+
+  .carousel-first-img img {
+    position: relative;
+    opacity: 1;
+  }
+
+  .btn-group {
+    width: 100%;
+  }
 }
